wal-rsx/tests/elements/element_without_opening_fail.stderr
error: This closing tag does not have a corresponding opening tag. (hint: try adding `<div>`)
 --> tests/elements/element_without_opening_fail.rs:4:12
  |
4 |     rsx! { </div> };
  |            ^^^^^^

error: This closing tag does not have a corresponding opening tag. (hint: try adding `<span>`)
 --> tests/elements/element_without_opening_fail.rs:5:12
  |
5 |     rsx! { </span> };
  |            ^^^^^^^

error: This closing fragment does not have a corresponding opening fragment. (hint: try adding `<>`)
 --> tests/elements/element_without_opening_fail.rs:6:12
  |
6 |     rsx! { </> };
  |            ^^^

error: This closing tag does not have a corresponding opening tag. (hint: try adding `<span>`)
 --> tests/elements/element_without_opening_fail.rs:7:17
  |
7 |     rsx! { <div></span> };
  |                 ^^^^^^^

error: This closing tag does not have a corresponding opening tag. (hint: try adding `<div>`)
 --> tests/elements/element_without_opening_fail.rs:8:23
  |
8 |     rsx! { <div><span></div></span></div> };
  |                       ^^^^^^
