wal-rsx/tests/elements/element_without_opening_fail.rs
use wal_rsx::rsx;

fn main() {
    rsx! { </div> };
    rsx! { </span> };
    rsx! { </> };
    rsx! { <div></span> };
    rsx! { <div><span></div></span></div> };
}
